# ffmpegstudy

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/alibaba/ailab/ffmpegso/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cut_video.cpp  ffmpeg_cmd.c  ffmpeg_jni_define.h  native-lib.cpp
app/src/main/cpp/ffmpeg/: ffmpeg_opt.c
app/src/main/cpp/include/libavcodec/: mathops.h
app/src/main/cpp/include/libavutil/: ffversion.h  timer.h
app/src/main/java/com/alibaba/ailab/ffmpegso/: AppFileHelper.kt  AudioBean.kt  FFmpegApplication.java  FFmpegCmd.java  FFmpegHandler.java  FFmpegUtil.java  FileUtil.kt  FileUtils.java  GetFilePathFromUri.java  JsonParseTool.kt  LrcLine.kt  MainActivity.kt  MediaBean.kt  OnHandleListener.kt  PermissionManager.kt  ThreadPoolUtil.kt  Toasty.java  VideoBean.kt
app/src/main/libs/arm64-v8a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/res/drawable/: custom_toast_bg.xml
app/src/main/res/layout/: activity_main.xml  toast_layout.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: filepaths.xml
app/src/test/java/com/alibaba/ailab/ffmpegso/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
